--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "watch": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ui": "rm -rf build && cd ../moocfullstack/osa2/puhelinluettelo-frontend && npm run build --prod && cp -r build ../../../mooc-puhelinluettelo-backend/",
+    "build:ui": "rm -rf build && cd ../mooc-fullstack-2019/osa2/puhelinluettelo-frontend && npm run build --prod && cp -r build ../../../mooc-2019-puhelinluettelo-backend/",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
     "logs:prod": "heroku logs --tail"
   },
@@ -29,6 +29,7 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "mongoose-unique-validator": "^2.0.3",
     "nodemon": "^1.19.4"
   }
 }
