--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.10",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
-    "mongoose-unique-validator": "^2.0.3",
     "nodemon": "^1.19.4"
   }
 }
