--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "watch": "nodemon index.js",
+	"lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../mooc-fullstack-2019/osa2/puhelinluettelo-frontend && npm run build --prod && cp -r build ../../../mooc-2019-puhelinluettelo-backend/",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
@@ -30,6 +31,7 @@
     "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
     "nodemon": "^1.19.4"
   }
 }
